[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel8.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel7.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel5.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel-attack-1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel-attack-2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/Angel/angel-attack-3.png" type="Texture" id=12]
[ext_resource path="res://Script/Enemies/Angel.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Enemies/DeathAnimation.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Enemies/ChurchStage/AngelAttack.tscn" type="PackedScene" id=15]



[sub_resource type="CapsuleShape2D" id=1]
radius = 11.7405
height = 34.087

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 34.0

[node name="Angel" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 8
script = ExtResource( 13 )
angel_attack_scene = ExtResource( 15 )

[node name="CollideWithPlayer" type="Area2D" parent="." index="0"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWithPlayer" index="0"]
position = Vector2( 0, 12.784 )
shape = SubResource( 1 )

[node name="Sprite" parent="Body" index="0"]
frames = SubResource( 2 )
animation = "idle"
frame = 4
playing = true

[node name="DeathAnimation" parent="Body" index="1" instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, 8 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, 12 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="." index="5"]
wait_time = 7.0
autostart = true
[connection signal="body_entered" from="CollideWithPlayer" to="." method="_on_CollideWithPlayer_body_entered"]
[connection signal="animation_finished" from="Body/Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
